--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.App{
+    height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    color:bisque
+   
+}
+.container{
+   
+    text-align: center;
+   padding: 30px;
+   width: 40%;
+  
+   background-color: #1B4E64;
+    
+}
+.cards{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   margin: 10px 14px;
+}
+.del{
+    background-color:bisque;
+   height: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  
